[package]
name = "furnace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "2.1.1"
dotenv = "0.15.0"
base64 = "0.21.0"
once_cell = "1.16.0"
# hudhook = "0.3.0"
hudhook = { git = "https://github.com/catornot/hudhook.git" }
imgui = "0.11.0"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]
