[package]
name = "furnace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "=3.0.0"
dotenv = "0.15.0"
base64 = "0.21.0"
once_cell = "1.16.0"
imgui = "0.11.0"
hudhook = "0.5.0"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]
